--- a/packages/docs/src/pages/tokens/fonts.stories.mdx
+++ b/packages/docs/src/pages/tokens/fonts.stories.mdx
@@ -7,4 +7,4 @@ import { fonts } from '@ignite-ui/tokens';
 
 # Fonts Families
 
-<TokensGrid tokens={fonts} hasRemValue/>
+<TokensGrid tokens={fonts}/>
